<resources>
    <string name="app_name">My Karaoke List</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="register_new_account">Create New Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="karaoke_image">karaoke image</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_does_not_exist">Email does not exist</string>
    <string name="artist_name">Artist Name</string>
    <string name="song_title">Song Title</string>
    <string name="lyrics_image">lyricsImage</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_new_song">Add New Song</string>
    <string name="loading_account">Loading Account...</string>
    <string name="resetting_password">Reseting Password...</string>

    <!-- Gracenote keys -->
    <string name="gnsdk_client_id">535369265</string>
    <string name="gnsdk_client_tag">676F05084996BE72D7D35F2BAEAD9C4C</string>
</resources>
